--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
     "prettier": "^2.2.1",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "sass": "^1.26.5",
+    "sass-loader": "^8.0.2"
   },
   "eslintConfig": {
     "root": true,
